# word-guesser

./: Cargo.toml  README.md
src/: main.rs
wordlists/: wordlist-starwars  wordlist-test
