[package]
name = "word-guesser"
version = "0.1.0"
authors = ["mib <mib@mib.dev>"]
edition = "2018"
license = "MIT"
description = "Simple word-guessing game"
repository = "https://github.com/mibmo/word-guesser"
readme = "README.md"
keywords = ["game"]
categories = ["game"]

[dependencies]
console = "0.13.0"
itertools = "0.9.0"
rand = "0.7.3"
structopt = "0.3.20"
